Auth: Fix scroll on small screens (#6214)

--- a/src/components/auth/Auth.scss
+++ b/src/components/auth/Auth.scss
@@ -83,6 +83,7 @@
 #auth-password-form,
 #auth-qr-form {
   overflow-y: auto;
+  height: 100%;
 }
 
 #auth-phone-number-form {
